--- a/main.kv
+++ b/main.kv
@@ -13,7 +13,7 @@ ScreenManager:
             size_hint_y: .75
             Image:
                 id: image1
-                source: "login_another.gif" if theme.active else "login.gif"
+                source: "assets/login_another.gif" if theme.active else "assets/login.gif"
                 anim_delay: 1/24
                 pos_hint: {"x": .15, "y": .5}
 
@@ -251,7 +251,7 @@ ScreenManager:
             size_hint_y: .75
             Image:
                 id: image1
-                source: "login_another.gif" if theme.active else "login.gif"
+                source: "assets/login_another.gif" if theme.active else "assets/login.gif"
                 anim_delay: 1/24
                 pos_hint: {"x": .15, "y": .5}
 
@@ -394,7 +394,7 @@ ScreenManager:
 
             Image:
                 id: image2
-                source: "process_another.gif" if theme.active else "process.gif"
+                source: "assets/process_another.gif" if theme.active else "assets/process.gif"
                 pos_hint: {"x": 0, "y": .23}
 
             MDFloatLayout:
@@ -548,7 +548,7 @@ ScreenManager:
 
             Image:
                 id: image3
-                source: "manager_another.gif" if theme.active else "manager.gif"
+                source: "assets/manager_another.gif" if theme.active else "assets/manager.gif"
                 pos_hint: {"x": 0, "y": 0.1}
 
             MDLabel:
@@ -692,7 +692,7 @@ ScreenManager:
 
             Image:
                 id: image4
-                source: "check_another.gif" if theme.active else "check.gif"
+                source: "assets/check_another.gif" if theme.active else "assets/check.gif"
                 pos_hint: {"x": 0, "y": 0.1}
 
             MDLabel:
